# ou-sont-les-femmes

./: .gitignore  LICENSE  README.md  ou-sont-les-femmes.cabal
app/: Clusterify.hs  Main.hs  OuSontLesFemmes.hs
data/: db_all_names.csv  db_fr_names.csv
src/: CSVPlayer.hs  NameCluster.hs  NameGender.hs  OptApplicative.hs  Types.hs  Utils.hs
university-report/: chapter1.md  chapter1.md.sb-a0209df8-xypDze  chapter2.md  chapter3.md  conclusion.md  introduction.md  main.tex  makefile  metadata.yaml  mytemplate.latex
