name:                ou-sont-les-femmes
version:             0.1.0.0
synopsis:            Project aiming to study women's place in scientific fields
description:         Please see README.md
homepage:            http://github.com/Tydax/ou-sont-les-femmes#readme
license:             BSD3
license-file:        LICENSE
author:              Armand BOUR
maintainer:          tydax@protonmail.ch
copyright:           2016 Armand (Tydax) BOUR
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utils
                     , CSVLoader
                     , NameCluster
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , edit-distance
  default-language:    Haskell2010

executable clusterify-exe
  hs-source-dirs:      app
  main-is:             Clusterify.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ou-sont-les-femmes
  default-language:    Haskell2010

test-suite ou-sont-les-femmes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ou-sont-les-femmes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tydax/ou-sont-les-femmes
